force-app/main/default/objects/Account/fields/Copado_One__c.field-meta.xml
<CustomField>
    <fullName>Copado_One__c</fullName>
    <label>Copado_One</label>
    <length>12</length>
    <type>Text</type>
</CustomField>