force-app/main/default/objects/Account/fields/Copado_Two__c.field-meta.xml
<CustomField>
    <fullName>Copado_Two__c</fullName>
    <label>Copado_Two</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>